Karl Dominik Casas resume

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,13 +11,17 @@
     <h1 class="name">{{ sidebar.name }}</h1>
     {% endif %}
 
-    {% if sidebar.tagline %}
-    <h3 class="tagline">{{ sidebar.tagline }}</h3>
+    {% if sidebar.taglines %}
+      {% for tagline in sidebar.taglines %}
+        <h3 class="tagline">{{ tagline }}</h3>
+      {% endfor %}
     {% endif %}
 
   </div><!--//profile-container-->
 
   {% include contact.html %}
+  
+  {% include certifications.html %}
 
   {% if sidebar.education %}
     {% include education.html %}
